# SudokuVision

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yaml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-vision.txt
.github/workflows/: container.yml
app/: .metadata  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/data/: sudoku_api_client.dart  sudoku_repository.dart
app/lib/models/: sudoku_state.dart
app/lib/pages/: camera_page.dart  review_page.dart  settings_page.dart  solution_page.dart
app/lib/widgets/: live_preview.dart  (+5 more)
app/linux/: CMakeLists.txt
app/test/: api_client_test.dart  repository_test.dart  screenshot_capture.dart  widget_test.dart
app/windows/: CMakeLists.txt
docs/: FLUTTER_APPLE_DESIGN.md  TDD_WORKFLOW.md  TINY_CNN_MODEL_RESULT_SPEC.md
scripts/: evaluate_tiny_cnn.py  export_tflite.py  recognize_image.py  train_mnist.py
sudoku_vision/: __init__.py  api.py  board.py  camera.py  cli.py  errors.py  host_camera.py  model.py  pipeline.py  preprocessing.py  recognizer.py  solver.py  stream.py
tests/: test_api.py  test_camera.py  test_ci_config.py  test_cli.py  test_cli_solve.py  test_fixture_accuracy.py  test_flutter_design_docs.py  test_host_camera.py  test_integration.py  test_makefile.py  test_model_result_spec.py  test_pipeline.py  test_preprocessing.py  test_readme.py  test_recognizer.py  test_requirements.py  test_solver.py  test_stream.py
(+8 files in other folders)
